<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestCellBroadcast</string>
    <string name="action_settings">Settings</string>

    <string name="test_sim1">Test SIM1</string>
    <string name="test_sim2">Test SIM2</string>
    <string name="btn_send">Send</string>

    <!-- Taiwan PWS -->
    <string name="msg_id_911">911</string>
    <string name="msg_id_919">919</string>

    <!-- ETWS 4352 -->
    <string name="msg_id_4352">CMAS Presidential 4352</string>

    <!-- CMAS Presidential -->
    <string name="msg_id_4370">CMAS Presidential 4370</string>
    <!-- <string name="msg_id_4383">CMAS Presidential 4383</string> -->

    <!-- CMAS Extreme -->
    <string name="msg_id_4372">CMAS Extreme 4372</string>

    <!-- CMAS Severe -->
    <string name="msg_id_4374">CMAS Severe 4374</string>

    <!-- CMAS Amber -->
    <string name="msg_id_4379">CMAS Amber 4379</string>

    <!-- CMAS Test -->
    <string name="msg_id_4380">CMAS Test 4380</string>
    <!-- <string name="msg_id_4393">CMAS Test 4393</string> -->

    <!-- Brazil -->
    <string name="msg_id_50">50</string>

    <!-- Custom -->
    <string name="msg_id_custom">custom channel</string>
</resources>
